--- a/hiraansari.html
+++ b/hiraansari.html
@@ -2,15 +2,19 @@
 <html>
 
 	<head>
-	<link rel="index" type="text/css" href="index.html"/>
 	<title> Hira Ansari </title>	
+	<nav>About</nav>
+	<nav>Portfolio</nav>	
+	<nav>Contact</nav>
 	</head>
 
-
-
-
 	<body>
-		
+
+
+
+
+
+	<footer>Copyright 2016 Hira Ansari</footer>	
 
 </body>
 </html>
