--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <html>
 
 	<head>
-	<title> Hira Ansari </title>	
+	<title> Hira Ansari </title>
+	<nav>About</nav>
+	<nav>Portfolio</nav>	
+	<nav>Contact</nav>
 	</head>
 
-	<body>
-	HI, MY NAME IS HIRA ANSARI
-	<br> 
-	I am a Graphic Designer, from New Jersey. I have a passion for creating almost anything, from food to art. My newfound passion is coding...
-	
+	<header><h4>About Me</h4></header>
 
+	<aside>
+
+		<h6>Connect with Me</h6>
+		
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
+
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
+
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
+
+	</aside>
+
+	<body>
+
+	<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/IMG_2692.jpg?raw=true"/> 
+
+	HI, MY NAME IS HIRA ANSARI.
+	I am a Graphic Designer, from New Jersey. I have a passion for creating almost anything, from food to art. My newfound passion is coding...
+
+
+
+	<footer>Copyright 2016 Hira Ansari</footer>	
 
 </body>
 </html>
