--- a/hiraansari.html
+++ b/hiraansari.html
@@ -2,19 +2,21 @@
 <html>
 
 	<head>
+	<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+	</head>
+
 	<title> Hira Ansari </title>	
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
-	</head>
-
-	<body>
 
 
+<body>
 
-
-
-	<footer>Copyright 2016 Hira Ansari</footer>	
+	
 
 </body>
+
+<footer>(C)Copyright 2016 Hira Ansari</footer>	
+
 </html>
