--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,14 @@
 <html>
 
 	<head>
+	<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+	</head>
+
 	<title> Hira Ansari </title>
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>	
-	</head>
+	
 
 	<header><h4>Contact</h4></header>
 
@@ -21,6 +24,8 @@
 		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
 
 	</aside>
+
+	<div class="background">
 
 	<body>
 
@@ -38,9 +43,13 @@
 		    <input type="text" class="form-control" id="exampleInputName2">
 		  </div>
 		  <button type="submit" class="btn btn-default">Submit</button>
-	</form>
+		</form>
+		</div>
 
-	<footer>Copyright 2016 Hira Ansari</footer>	
+	
 
 </body>
+
+		<footer>(C)Copyright 2016 Hira Ansari</footer>	
+
 </html>
