--- a/index.html
+++ b/index.html
@@ -2,36 +2,43 @@
 <html>
 
 	<head>
+	<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+	</head>
+
 	<title> Hira Ansari </title>
+
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
-	</head>
 
 	<header><h4>About Me</h4></header>
 
-	<aside>
+<aside>
 
-		<h6>Connect with Me</h6>
+	<h6>Connect with Me</h6>
 		
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
+<img id="bio-image" src="https://github.com/ha3090/Basic Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
 
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
+<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
 
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
+<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
 
-	</aside>
+</aside>
 
-	<body>
+	
+<body>
 
-	<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/IMG_2692.jpg?raw=true"/> 
+<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/IMG_2692.jpg?raw=true"/>
+ 
 
-	HI, MY NAME IS HIRA ANSARI.
-	I am a Graphic Designer, from New Jersey. I have a passion for creating almost anything, from food to art. My newfound passion is coding...
+	
+	I am a Graphic Designer, from New Jersey. I have a passion for creating almost anything from food to art. My newfound passion is coding...let's see how it works out. 
 
-
-
-	<footer>Copyright 2016 Hira Ansari</footer>	
 
 </body>
+
+
+<footer>(C)Copyright 2016 Hira Ansari</footer>	
+
+
 </html>
