--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,14 @@
 <html>
 
 	<head>
+	<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+	</head>
+
 	<title> Hira Ansari </title>	
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
-	</head>
+	
 
 	<header><h4>Portfolio</h4></header>
 
@@ -35,7 +38,10 @@
 
 
 
-	<footer>Copyright 2016 Hira Ansari</footer>	
+	
 
 </body>
+
+<footer>(C)Copyright 2016 Hira Ansari</footer>	
+
 </html>
