--- a/contact.html
+++ b/contact.html
@@ -6,24 +6,31 @@
 	</head>
 
 	<title> Hira Ansari </title>
+
+	<div class="main header">
+	<header><h3>Hira Ansari</h3></header>
+	</div>
+
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>	
 	
 
 	<header><h4>Contact</h4></header>
-
-	<aside>
-
+	
+<div class="sidebar">
+	<sidebar>
+	
 		<h6>Connect with Me</h6>
 		
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"height="42" width="42"/> 
 
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"height="42" width="42"/> 
 
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
-
-	</aside>
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"height="42" width="42"/> 
+	
+	</sidebar>
+</div>
 
 	<div class="background">
 
