--- a/hiraansari.html
+++ b/hiraansari.html
@@ -6,6 +6,11 @@
 	</head>
 
 	<title> Hira Ansari </title>	
+
+	<div class="main header">	
+	<header><h3>Hira Ansari</h3></header>
+	</div>
+	
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
