--- a/portfolio.html
+++ b/portfolio.html
@@ -2,43 +2,50 @@
 <html>
 
 	<head>
-	<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
 	</head>
 
-	<title> Hira Ansari </title>	
+	<div class="container">
+
+<title> Hira Ansari </title>	
+
+	<div class="main header">
+	<header><h3>Hira Ansari</h3></header>
+	</div>
+
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
-	
-
+	 
 	<header><h4>Portfolio</h4></header>
 
-	<aside>
-
-		<h6>Connect with Me</h6>
-		
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
-
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
-
-		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
-
-	</aside>
-
-	<body>
-
+<body>
+	<div class="main section">
 	<ul> 
 		<li>Hangman</li>
 		<li>RPG Game</li>
 		<li>Trivia Game</li>
 		<li>Rutgers Info Widget</li>
 		<li>Rock Paper Scissors</li>
-	</ul>
+	</ul>	
+	</div>
+	</body>
 
 
-
-
+<div class="sidebar">
+	<sidebar>
 	
+		<h6>Connect with Me</h6>
+		
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"height="42" width="42"/> 
+
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"height="42" width="42"/> 
+
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"height="42" width="42"/> 
+	
+	</sidebar>
+</div>
+
 
 </body>
 
