--- a/index.html
+++ b/index.html
@@ -7,29 +7,34 @@
 
 	<title> Hira Ansari </title>
 
+	<div class="main header">	
+	<header><h3>Hira Ansari</h3></header>
+	</div>
+
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
 
 	<header><h4>About Me</h4></header>
 
-<aside>
-
-	<h6>Connect with Me</h6>
+<div class="sidebar">
+	<sidebar>
+	
+		<h6>Connect with Me</h6>
 		
-<img id="bio-image" src="https://github.com/ha3090/Basic Portfolio/blob/master/assets/images/github%20icon.png?raw=true"/> 
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"height="42" width="42"/> 
 
-<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"/> 
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/linkedin%20blue.png?raw=true"height="42" width="42"/> 
 
-<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"/> 
-
-</aside>
-
+		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/portfoliobox%20icon.png?raw=true"height="42" width="42"/> 
+	
+	</sidebar>
+</div>
 	
 <body>
 
-<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/IMG_2692.jpg?raw=true"/>
- 
+<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/IMG_2692.jpg?raw=true"height="160" width="130"/>
+
 
 	
 	I am a Graphic Designer, from New Jersey. I have a passion for creating almost anything from food to art. My newfound passion is coding...let's see how it works out. 
