--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,19 @@
 
 	<title> Hira Ansari </title>
 
-	<div class="main header">
-	<header><h3>Hira Ansari</h3></header>
+	<div class="main header">	
+	<header><center><h4>Hira Ansari</h4></center></header>
 	</div>
 
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>	
 	
-
+	<div class="header">
 	<header><h4>Contact</h4></header>
-	
+	</div>
+
+
 <div class="sidebar">
 	<sidebar>
 	
@@ -32,10 +34,9 @@
 	</sidebar>
 </div>
 
-	<div class="background">
-
+	
+<div class="background">
 	<body>
-
 	<form class="horizontal">
   			<div class="form-group">
 		    <label for="exampleInputName2">Name</label>
@@ -50,13 +51,14 @@
 		    <input type="text" class="form-control" id="exampleInputName2">
 		  </div>
 		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
-		</div>
+	</form>
+	</body>
+</div>
 
 	
 
-</body>
 
-		<footer>(C)Copyright 2016 Hira Ansari</footer>	
+
+<footer><center><h6>(C)Copyright 2016 Hira Ansari</h6></center></footer>	
 
 </html>
