--- a/hiraansari.html
+++ b/hiraansari.html
@@ -8,9 +8,9 @@
 	<title> Hira Ansari </title>	
 
 	<div class="main header">	
-	<header><h3>Hira Ansari</h3></header>
+	<header><center><h4>Hira Ansari</h4></center></header>
 	</div>
-	
+
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
@@ -22,6 +22,6 @@
 
 </body>
 
-<footer>(C)Copyright 2016 Hira Ansari</footer>	
+<footer><center><h6>(C)Copyright 2016 Hira Ansari</h6></center></footer>	
 
 </html>
