--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,17 @@
 
 <title> Hira Ansari </title>	
 
-	<div class="main header">
-	<header><h3>Hira Ansari</h3></header>
+	<div class="main header">	
+	<header><center><h4>Hira Ansari</h4></center></header>
 	</div>
 
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
 	 
+	<div class="header">
 	<header><h4>Portfolio</h4></header>
+	</div>
 
 <body>
 	<div class="main section">
@@ -35,7 +37,9 @@
 <div class="sidebar">
 	<sidebar>
 	
+		<div class="header">
 		<h6>Connect with Me</h6>
+		</div>
 		
 		<img id="bio-image" src="https://github.com/ha3090/Basic-Portfolio/blob/master/assets/images/github%20icon.png?raw=true"height="42" width="42"/> 
 
@@ -49,6 +53,6 @@
 
 </body>
 
-<footer>(C)Copyright 2016 Hira Ansari</footer>	
+<footer><center><h6>(C)Copyright 2016 Hira Ansari</h6></center></footer>	
 
 </html>
