--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 	<title> Hira Ansari </title>
 
 	<div class="main header">	
-	<header><h3>Hira Ansari</h3></header>
+	<header><center><h4>Hira Ansari</h4></center></header>
 	</div>
 
 	<nav>About</nav>
 	<nav>Portfolio</nav>	
 	<nav>Contact</nav>
 
+	<div class="header">
 	<header><h4>About Me</h4></header>
+	</div>
 
 <div class="sidebar">
 	<sidebar>
@@ -43,7 +45,6 @@
 </body>
 
 
-<footer>(C)Copyright 2016 Hira Ansari</footer>	
-
+<footer><center><h6>(C)Copyright 2016 Hira Ansari</h6></center></footer>	
 
 </html>
